Fix #92. Removed specific rules for modal body
This removes the max-height and scroll properties for modal windows. This avoids issues with overflowing object like select tools

--- a/theme/default/css/ms2-theme.css
+++ b/theme/default/css/ms2-theme.css
@@ -512,8 +512,6 @@ div.ol-scale-line-inner{
 
 .modal-body {
     background-color: white;
-    max-height: calc(100vh - 190px);
-    overflow-y: auto;
 }
 
 .react-draggable .draggable-header {
